# boids-algorithm-qt-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  boids.pro
src/: main.cpp
src/forms/: mainwindow.ui
src/headers/: mainwindow.h
src/windows/: mainwindow.cpp
